working esp based system for busses and weather tracking

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,4 +5,8 @@ framework = arduino
 
 monitor_speed = 115200
 lib_deps = 
-  liquidcrystal_i2c
+  marcoschwartz/LiquidCrystal_I2C @ ^1.1.4
+  bblanchon/ArduinoJson @ ^6.20.0
+
+build_flags =
+  -DCORE_DEBUG_LEVEL=5
